Fix bug tether drop is not display on mobile

--- a/resources/css/jankx.css
+++ b/resources/css/jankx.css
@@ -3,7 +3,7 @@
  * Author: Puleeno Nguyen
  * Author URI: https://puleeno.com
  * Description: This module is create the basic structure for Jankx theme. Other stylesheet will be defined in the theme
- * Version: 1.1.52
+ * Version: 1.1.54
  */
 /* http://meyerweb.com/eric/tools/css/reset/
    v5.0.1 | 20191019
@@ -753,8 +753,15 @@ table:not(.no-border) th, table:not(.no-border) td {
     margin-top: 20px;
   }
 }
+/************************
+ * Social sharing
+ ************************/
 #jankx-sharing-content {
   display: none;
+}
+
+.drop-element.drop-open {
+  z-index: 99;
 }
 
 @media (min-width: 768px) {
