--- a/sass/_socials.scss
+++ b/sass/_socials.scss
@@ -1,3 +1,11 @@
+/************************
+ * Social sharing
+ ************************/
 #jankx-sharing-content {
     display: none;
+}
+.drop-element {
+    &.drop-open {
+        z-index: 99;
+    }
 }
